# dark-web-monitoring

./: README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/routes/: blacklist.py  darkweb.py  osint.py  scrape.py
backend/app/services/: darkweb.py  darkweb_scraper.py  extractor.py  intelx.py  onion_search.py  osint.py  scraper.py
backend/app/utils/: formatting.py  risk_scoring.py
db/: README.md
docs/: README.md
frontend/: .gitignore  README.md
frontend/dwm-frontend/: package.json
frontend/dwm-frontend/src/: App.tsx  index.css
frontend/dwm-frontend/src/components/: BlacklistSideBar.tsx  DarkWebSearch.tsx  LoadingSpinner.tsx  OSINTSearch.tsx  RiskBadge.tsx  SearchBar.tsx  SearchInput.tsx  SearchResults.tsx  ThreatTable.tsx
frontend/dwm-frontend/src/components/ui/: Loader.tsx
frontend/dwm-frontend/src/hooks/: useBlacklistData.ts  useDarkWebData.ts  useOSINTData.ts  useThreatData.ts
frontend/dwm-frontend/src/pages/: Dashboard.tsx  Search.tsx  SearchPage.tsx
frontend/dwm-frontend/src/services/: api.ts
